[package]
name = "kzg-mini"
version = "0.1.1"
authors = ["Siddhartha <siddpal04@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = " https://github.com/sidx04/kzg-mini"
keywords = ["kzg", "commitment", "crypto", "polynomial", "ethereum", "zk"]
categories = ["cryptography", "api"]
edition = "2024"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-std = "0.5.0"

[dev-dependencies]
anyhow = "1.0.98"

[lib]
name = "kzg_mini"
path = "src/lib.rs"
